<resources>
    <string name="app_name">Hangman</string>
    <string name="you_have_guessed">You have guessed:</string>
    <string name="guesses_left">" guesses remaining)"</string>
    <string name="you_did_it">Well done, you did it!</string>
    <string name="alphabet">abcdefghijklmnopqrstuvwxyz</string>
    <string name="you_lost">You lost! Try a new game.</string>
    <string name="empty_guess">Empty guess.</string>
    <string name="invalid_character">Invalid character.</string>
    <string name="wrong_guess">Guessed word is wrong.</string>
    <string name="game_is_over">Game is over. Try a new game!</string>
</resources>
